--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jiaqi Nie
-#logo: /assets/img/headshot_circle.png
+logo: /asset/picture/IMG_3314 copy.JPG
 #description: text below image
 #show_downloads: false
 theme: jekyll-theme-minimal
